Refactor movie chunk services - remove source parameter from storeMovies and getMovieChunks methods, update related tests, and enhance logging